# smartify

./: .gitignore  README.md  dataset.json  pyproject.toml  smartify.code-workspace
.github/prompts/: google-docstring.prompt.md
agentic_development/: 020_prompt_evals.ipynb
agentic_development/building_with_claude_api/: 010_accessing_the_api.ipynb  021_prompt_evals_grader.ipynb  022_prompt_evals_fns.ipynb  030_prompting.ipynb  031_prompting_completed.ipynb  040_tools.ipynb  041_tools_007.ipynb  042_tools_008.ipynb  043_tools_009.ipynb  044_tool_streaming.ipynb  045_tool_streaming_completed.ipynb  046_text_editor_tool.ipynb  070_model_context_protocol.md
agentic_development/building_with_claude_api/content/: 030_output.html  030_output.json
agentic_development/content/: building-agentic-systems-from-scratch-market-value.md  discontinuous-innovations.md
aimedicine/: .cruft.json  .gitignore  .pre-commit-config.yaml
aimedicine/C1_Medical Diagnosis/C1W1/: C1_W1_Lab_1_data_exploration_and_image_preprocessing.ipynb  C1_W1_Lab_2_counting_labels_and_weighted_loss_function.ipynb  C1_W1_Lab_3_densenet.ipynb  C1_W1_Lab_4_patient_overlap_and_data_leakage.ipynb
aimedicine/docs/: api_docs.md
deeplearning_masterclass/: Automatic_Speech_Recognition_with_TensorFlow_2_by_Neuralearn_ai_.ipynb  Chat_With_Elon_Musk_using_BlenderBot_in_HuggingFace_🤗_Transformers_by_Neuralearn_ai_.ipynb  DCGAN_By_Neuralearn_ai_.ipynb  Extractive_Question_Answering_using_HuggingFace_🤗_Transformers_by_Neuralearn_ai_.ipynb  Grammatical_Error_Correction_using_T5_in_HuggingFace_🤗_by_Neuralearn_ai_.ipynb  Human_Emotions_Detection_by_Neuralearn_ai_.ipynb  Image_segmentation_by_Neuralearn_ai_.ipynb  Intent_Classification_for_Customer_Service_using_HuggingFace_🤗_Transformers_by_Neuralearn_ai_.ipynb  Linear_Regression_for_Predicting_Price_of_second_hand_Cars_by_Neuralearn_ai_.ipynb  Lyrics_Generator_using_GPT2_in_HuggingFace_🤗_by_Neuralearn_ai_.ipynb  Malaria_Detection_by_Neuralearn_ai_.ipynb  Malaria_Detection_by_Neuralearn_ai_[PyTorch_Version]_.ipynb  Named_Entity_Recognition_using_HuggingFace_🤗_Transformers_by_Neuralearn_ai_ (1).ipynb  Neural_Machine_Translation_using_HuggingFace_🤗_Transformers_by_Neuralearn_ai_.ipynb  Neural_Machine_Translation_with_Bahdanau_Attention_by_Neuralearn_ai_.ipynb  Neural_Machine_Translation_with_RNNs_by_Neuralearn_ai_.ipynb  Neural_Machine_Translation_with_Transformers_by_Neuralearn_ai_.ipynb  People_Counting_by_Neuralearn_ai_.ipynb  Search_Engine_for_e_commerce_using_Sentence_Transformers_in_HuggingFace_🤗_by_Neuralearn_ai_.ipynb  Sentiment_Analysis_with_BERT_in_HuggingFace_🤗_by_Neuralearn_ai_.ipynb  Sentiment_Analysis_with_Transformers_by_Neuralearn_ai_.ipynb  TensorFlow_Tensors_Neuralearn_ai.ipynb  VAE_by_Neuralearn_ai_.ipynb  YOLO_Object_Detection_from_Scratch_by_Neuralearn_ai_.ipynb
smartify/: __init__.py
smartify/agentic_development/: __init__.py
smartify/agentic_development/mcp/: __init__.py  main.py  mcp_client.py  mcp_server.py  smartify.code-workspace
smartify/agentic_development/mcp/core/: chat.py  claude.py  cli.py  cli_chat.py  tools.py
smartify/agentic_development/mcp_cli_project_COMPLETE/: __init__.py  main.py
smartify/agentic_development/mcp_cli_project_COMPLETE/core/: chat.py  cli.py  cli_chat.py  tools.py
tensorflow/tensorflow-deep-learning/: 001_beginner.ipynb  00_tensorflow_fundamentals.ipynb  00_tensorflow_fundamentals_exercises.ipynb  01_neural_network_regression_in_tensorflow.ipynb  01_neural_network_regression_in_tensorflow_exercise.ipynb  02_neural_network_classification_in_tensorflow.ipynb  02_neural_network_classification_in_tensorflow_exercises.ipynb  03_convolutional_neural_networks_in_tensorflow.ipynb  04_transfer_learning_and_fine_tuning.ipynb  tensorflow-deep-learning.code-workspace
tensorflow/tensorflow-deep-learning/src/: __init__.py  visualize.py
tensorflow/tensorflow-developers-certificate-specialization/tensorflow-1-public/: README.md
tensorflow/tensorflow-developers-certificate-specialization/tensorflow-1-public/C1/W1/assignment/: C1W1_Assignment.ipynb
tensorflow/tensorflow-developers-certificate-specialization/tensorflow-1-public/C1/W1/ungraded_lab/: C1_W1_Lab_1_hello_world_nn.ipynb
tensorflow/tensorflow-developers-certificate-specialization/tensorflow-1-public/C1/W2/assignment/: C1W2_Assignment.ipynb
tensorflow/tensorflow-developers-certificate-specialization/tensorflow-1-public/C1/W2/ungraded_labs/: C1_W2_Lab_1_beyond_hello_world.ipynb  C1_W2_Lab_2_callbacks.ipynb
